--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{layout.css}"/>
 </head>
 <body>
-    There will be my magic dissertation project ;D
+    <div id="header">There will be my magic dissertation project ;D</div>
 </body>
 </html>
