--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: header">
+    <title>SCORAC index page</title>
 </head>
 <body>
-    some randome text
-    <a href="/recipes">recipes</a>
-    <a href="/solution">queryGPT</a>
-    <a href="/stock">stock</a>
-    <a href="/users">users</a>
+    <div class="container-fluid">
+        <div class="row">
+            <div th:replace="fragments/sidebar :: sidebar('index')"></div>
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div> index</div>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
