--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -17,6 +17,9 @@
         <li class="nav-item" th:classappend="${activeMenu == 'users' ? 'active' : ''}">
           <a class="nav-link" href="/users">Users</a>
         </li>
+        <li class="nav-item logoutBtn">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
