--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <div class="container-fluid">
+        <div th:replace="fragments/logoBar :: logoBar"></div>
         <div class="row">
             <div th:replace="fragments/sidebar :: sidebar('index')"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
