--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -17,8 +17,14 @@
         <li class="nav-item" th:classappend="${activeMenu == 'users' ? 'active' : ''}">
           <a class="nav-link" href="/users">Users</a>
         </li>
-        <li class="nav-item logoutBtn">
-          <a class="nav-link" href="/logout">Logout</a>
+        <li class="nav-item" th:classappend="${activeMenu == 'orders' ? 'active' : ''}">
+          <a class="nav-link" href="/orders">Orders</a>
+        </li>
+        <li class="nav-item" th:classappend="${activeMenu == 'reports' ? 'active' : ''}">
+          <a class="nav-link" href="/reports">Reports</a>
+        </li>
+        <li class="nav-item logoutBtn" th:action="@{/logout}">
+          <a class="nav-link" href="/logout" >Logout</a>
         </li>
       </ul>
     </div>
