--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,11 +1,11 @@
-<div th:fragment="sidebar(activeMenu)">
+<div th:fragment="sidebar(activeMenu)" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
     <div class="sidebar-sticky">
       <ul class="nav flex-column">
         <li class="nav-item" th:classappend="${activeMenu == 'index' ? 'active' : ''}">
           <a class="nav-link" href="/index">Homepage</a>
         </li>
-        <li class="nav-item" th:classappend="${activeMenu == 'recipes' ? 'active' : ''}">
+        <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'recipes' ? 'active' : ''}">
           <a class="nav-link" href="/recipes">Recipes</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'solution' ? 'active' : ''}">
@@ -14,13 +14,13 @@
         <li class="nav-item" th:classappend="${activeMenu == 'stock' ? 'active' : ''}">
           <a class="nav-link" href="/stock">Stock</a>
         </li>
-        <li class="nav-item" th:classappend="${activeMenu == 'users' ? 'active' : ''}">
+        <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'users' ? 'active' : ''}">
           <a class="nav-link" href="/users">Users</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'orders' ? 'active' : ''}">
           <a class="nav-link" href="/orders">Orders</a>
         </li>
-        <li class="nav-item" th:classappend="${activeMenu == 'reports' ? 'active' : ''}">
+        <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'reports' ? 'active' : ''}">
           <a class="nav-link" href="/reports">Reports</a>
         </li>
         <li class="nav-item logoutBtn" th:action="@{/logout}">
