--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -10,6 +10,7 @@
             <div th:replace="fragments/sidebar :: sidebar('users')"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
+                <div class="top alert alert-danger" th:if="${error != null}">User already exist!</div>
                 <form action="#" th:action="@{/users/adduser}" method="post">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username"/><br/>
