--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -12,7 +12,7 @@
                 <button><a href="newuser">New User</a></button>
                 <table border="1">
                     <tr>
-                        <th>ID</th>
+<!--                        <th>ID</th>-->
                         <th>Username</th>
                         <th>Name</th>
                         <th>Surname</th>
@@ -20,7 +20,7 @@
                         <th>Role</th>
                     </tr>
                     <tr th:each="user : ${list}">
-                        <td th:text="${user.id}">ID</td>
+<!--                        <td th:text="${user.id}">ID</td>-->
                         <td th:text="${user.username}">Username</td>
                         <td th:text="${user.name}">Name</td>
                         <td th:text="${user.surname}">Surname</td>
