--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -33,6 +33,10 @@
                     </select>
                     <input type="submit" value="Update"/>
                 </form>
+
+                <form th:action="@{/users/delete/{username}(username=*{username})}" method="post">
+                    <button type="submit" class="btn btn-danger">Delete User</button>
+                </form>
             </main>
         </div>
     </div>
