--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="~{fragments/header :: header}">
     <title>SCORAC manage users</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div th:replace="fragments/logoBar :: logoBar"></div>
+        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
         <div class="row">
-            <div th:replace="fragments/sidebar :: sidebar('users')"></div>
+            <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <h1>Edit User <span th:text="${user.username}"></span></h1>
                 <form th:action="@{/users/updateuser}" th:object="${user}" method="post">
