--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="~{fragments/header :: header}">
     <title>SCORAC orders page</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div th:replace="fragments/logoBar :: logoBar"></div>
+        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
         <div class="row">
-            <div th:replace="fragments/sidebar :: sidebar('orders')"></div>
+            <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div> orders</div>
             </main>
