--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="~{fragments/header :: header}">
     <title>SCORAC manage users</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div th:replace="fragments/logoBar :: logoBar"></div>
+        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
         <div class="row">
-            <div th:replace="fragments/sidebar :: sidebar('users')"></div>
+            <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div th:if="${successMessage}" th:text="${successMessage}"></div>
                 <button><a href="newuser">New User</a></button>
                 <table border="1">
                     <tr>
