--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -15,7 +15,7 @@
                    <input th:field="*{username}" type="hidden" name="username">
 
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" th:field="*{password}" />
+                    <input type="password" id="password" name="password" placeholder="current Password"/>
 
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" th:field="*{name}" />
