--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,30 +2,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-
+	<link rel="stylesheet" th:href="@{loginPage.css}"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<title>Login page </title>
 
 </head>
 <body>
-<div th:if="${param.error}">
+<div class="error" th:if="${param.error}">
 	Invalid username and password.
 </div>
-<div th:if="${param.logout}">
+<div class="error" th:if="${param.logout}">
 	You have been logged out.
 </div>
 <div class="container">
 	<div class="row">
-		<div  class="col-sm-12" id="wordle">
-<!--		<img th:src="@{/img/word.png}" alt="WORDLE" style="height: 7cm">-->
-		<h1 id="Logo">Logo</h1>
-
-			<form th:action="@{/login}" method="post">
-				<div><label> User Name :<br> <input class="pass" type="text" name="username"/> </label></div>
-				<div><label> Password:<br> <input class="pass" type="password" name="password"/> </label></div>
-				<div><input id="button" type="submit" value="Sign In"/></div>
+		<div class="col-sm-12" id="wordle">
+			<h1 id="Logo">Logo</h1>
+			<form th:action="@{/login}" method="post" id="login-form">
+				<div>
+					<label> User Name :<br>
+						<input class="input-field" type="text" name="username" placeholder="Enter your username"/>
+					</label>
+				</div>
+				<div>
+					<label> Password:<br>
+						<input class="input-field" type="password" name="password" placeholder="Enter your password"/>
+					</label>
+				</div>
+				<div>
+					<input class="btn btn-primary" id="button" type="submit" value="Sign In"/>
+				</div>
 			</form>
-
 		</div>
 	</div>
 </div>
