--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -10,33 +10,51 @@
             <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <h1>Edit User <span th:text="${user.username}"></span></h1>
-                <form th:action="@{/users/updateuser}" th:object="${user}" method="post">
+                <div>
+                <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="container mt-3" id="editUserForm">
+                    <div>
+                        <input th:field="*{username}" type="hidden" name="username">
+                    </div>
 
-                   <input th:field="*{username}" type="hidden" name="username">
+                    <div>
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" placeholder="Current Password" class="form-control">
+                    </div>
 
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" placeholder="current Password"/>
+                    <div>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" th:field="*{name}" class="form-control">
+                    </div>
 
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" th:field="*{name}" />
+                    <div >
+                        <label for="surname">Surname:</label>
+                        <input type="text" id="surname" name="surname" th:field="*{surname}" class="form-control">
+                    </div>
 
-                    <label for="surname">Surname:</label>
-                    <input type="text" id="surname" name="surname" th:field="*{surname}" />
+                    <div >
+                        <label for="position">Position:</label>
+                        <input type="text" id="position" name="position" th:field="*{position}" class="form-control">
+                    </div>
 
-                    <label for="position">Position:</label>
-                    <input type="text" id="position" name="position" th:field="*{position}" />
+                    <div>
+                        <label for="role">Role:</label>
+                        <select id="role" name="role" class="form-control">
+                            <option value="ADMIN">ADMIN</option>
+                            <option value="USER">USER</option>
+                        </select>
+                    </div>
 
-                    <label for="role">Role:</label>
-                    <select id="role" name="role">
-                        <option value="ADMIN">ADMIN</option>
-                        <option value="USER">USER</option>
-                    </select>
-                    <input type="submit" value="Update"/>
+                    <div>
+                        <input type="submit" value="Update" class="btn btn-primary" id="updateUser">
+                    </div>
                 </form>
 
-                <form th:action="@{/users/delete/{username}(username=*{username})}" method="post">
-                    <button type="submit" class="btn btn-danger">Delete User</button>
-                </form>
+                <div class="text-end">
+                    <form th:action="@{/users/delete/{username}(username=*{username})}" method="post">
+                        <button type="submit" class="btn btn-danger" id="deleteUser">Delete User</button>
+                    </form>
+                </div>
+                </div>
             </main>
         </div>
     </div>
