--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,5 +13,8 @@
             </main>
         </div>
     </div>
+
+    <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
+
 </html>
