--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -9,9 +9,9 @@
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <h1>Edit User <span th:text="${user.username}"></span></h1>
-                <div>
-                <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="container mt-3" id="editUserForm">
+                <div id="editUserForm">
+                    <h1>Edit User <span th:text="${user.username}"></span></h1>
+                    <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="container mt-3" >
                     <div>
                         <input th:field="*{username}" type="hidden" name="username">
                     </div>
@@ -58,5 +58,6 @@
             </main>
         </div>
     </div>
+    <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
