--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,12 +8,7 @@
 
 </head>
 <body>
-<div class="error" th:if="${param.error}">
-	Invalid username and password.
-</div>
-<div class="error" th:if="${param.logout}">
-	You have been logged out.
-</div>
+
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12" id="wordle">
@@ -33,6 +28,12 @@
 					<input class="btn btn-primary" id="button" type="submit" value="Sign In"/>
 				</div>
 			</form>
+			<div class="error msg-err" th:if="${param.error}">
+				Invalid username and password.
+			</div>
+			<div class="error msg-lout" th:if="${param.logout}">
+				You have been logged out.
+			</div>
 		</div>
 	</div>
 </div>
