--- a/src/main/resources/templates/fragments/logoBar.html
+++ b/src/main/resources/templates/fragments/logoBar.html
@@ -1,8 +1,11 @@
 <div th:fragment="logoBar" >
-     <div class="row">
-         <div class="col-md-2 ms-sm-auto col-lg-1 px-md-4" style="height: 2cm">
-             <img src="https://cdn3.vectorstock.com/i/1000x1000/72/42/leaf-food-logo-icon-design-vector-22767242.jpg" alt="Leaf Food Logo" class="logo" >
-         </div>
-         <div class="col"style="text-align: center; font-weight: bold; font-size: 26pt"> SCORAC </div>
-     </div>
+    <div class="row">
+        <div class="col-md-2">
+            <img src="/img/logo.jpg" alt="Leaf Food Logo" class="logo">
+        </div>
+        <div class="col"></div>
+        <div class="col-md-8 d-flex  align-items-end" id="customer-name">
+            Scorac
+        </div>
+    </div>
 </div>
