--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,11 @@
     <div class="container-fluid">
         <div th:replace="~{fragments/logoBar :: logoBar}"></div>
         <div class="row">
-            <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
+            <div th:replace="~{fragments/sidebar :: sidebar('i')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div> index</div>
-            </main>
+                        <div> indexxx</div>
+                    </main>
+            </div>
         </div>
     </div>
 
