--- a/src/main/resources/templates/total.html
+++ b/src/main/resources/templates/total.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SCORAC stock contoll</title>
+    <title>SCORAC stock level</title>
 </head>
 <body>
    <div class="container-fluid">
