--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,5 +1,5 @@
 <div th:fragment="sidebar(activeMenu)" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" class="col-md-3 col-lg-2">
-  <nav class="d-md-block bg-light sidebar">
+  <nav class="sidebar">
     <button id="sidebarToggle">&#9776;</button>
     <div class="sidebar-sticky">
       <ul class="nav flex-column">
