--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -7,10 +7,24 @@
 /*.nav-link:hover{*/
 /*    background-color: darkgray;*/
 /*}*/
+.bg {
+    /* The image used */
+    background-image: url("/img/background.jpg");
+    /* Full height */
+    height: 100vh;
+    /* Center and scale the image nicely */
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* Make background image fixed */
+    background-attachment: fixed;
+}
 
 body{
     background-color:#FFFCEF;
     color: #276749 ;
+    /*usun!!*/
+    overflow-y: hidden;
 }
 .msg-err{
     text-align: center;
@@ -54,6 +68,10 @@ input{
     background-color:#F6AD55 ;
 }
 
+.nav-link {
+    color: #124413;
+}
+
 .nav-link:hover {
     background-color: green;
     color: wheat;
@@ -71,15 +89,29 @@ input{
     margin-top: 1rem;
 
 }
-#customer-name{
+.logo-row{
     font-weight: bold;
     font-size: 30pt;
-    padding: 0px 0 15px 0;
+    padding: 0px 0 5px 0;
+    border-bottom-color: #124413;
+    border-bottom: solid;
+
+}
+
+h1{
+    margin-top: 10px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+
+.submit{
+    width: 25%
 }
 
 @media (max-width: 767.98px) {
     .sidebar {
-        width: 100%;
+        width: 104%;
         height: 1.2cm;
         position: relative; /* Change position for small devices */
         background-color:#F6AD55 ;
@@ -101,6 +133,18 @@ input{
     }
     .nav-item.show {
         display: block; /* Show when toggled */
+    }
+
+    .submit{
+        width: 100%;
+    }
+
+    .logo-row{
+        text-align: center;!important;
+    }
+
+    input{
+        width: 100%;
     }
 }
 
