--- a/src/main/resources/static/userCard.css
+++ b/src/main/resources/static/userCard.css
@@ -30,3 +30,13 @@
     text-align: right;
     margin-top: 20px;
 }
+
+#role{
+    width: 4cm;
+    height: 2.2em;
+}
+
+@media (max-width: 767.98px) {
+
+
+}
