--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,17 @@
 <body>
     <div class="container-fluid">
         <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row">
+        <div class="row bg">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                        <div> indexxx</div>
-                    </main>
+                <h1>Main</h1>
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col">
+
+                    </div>
+                </div>
+            </main>
             </div>
         </div>
     </div>
