--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -9,32 +9,41 @@
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <h1>Add new user</h1>
+                <a href="/users/list" class="btn btn-secondary">Back</a>
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col">
 
-                <div class="top alert alert-danger" th:if="${error != null}">User already exist!</div>
-                <form action="#" th:action="@{/users/adduser}" method="post">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username"/><br/>
+                        <div class="top alert alert-danger" th:if="${error != null}">User already exist!</div>
+                        <form action="#" th:action="@{/users/adduser}" method="post">
+                            <label for="username">Username:</label>
+                            <input type="text" id="username" name="username"/><br/>
 
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password"/><br/>
+                            <label for="password">Password:</label>
+                            <input type="password" id="password" name="password"/><br/>
 
-                    <label for="password">Name:</label>
-                    <input type="text" id="name" name="name"/><br/>
+                            <label for="password">Name:</label>
+                            <input type="text" id="name" name="name"/><br/>
 
-                    <label for="password">Surname:</label>
-                    <input type="text" id="surname" name="surname"/><br/>
+                            <label for="password">Surname:</label>
+                            <input type="text" id="surname" name="surname"/><br/>
 
-                    <label for="password">Position:</label>
-                    <input type="text" id="position" name="position" /><br/>
+                            <label for="password">Position:</label>
+                            <input type="text" id="position" name="position" /><br/>
 
-                    <label for="role">Role:</label>
-                    <select id="role" name="role">
-                         <option value="ADMIN">ADMIN</option>
-                         <option value="USER">USER</option>
-                    </select>
+                            <label for="role">Role:</label></br>
+                            <select id="role" name="role">
+                                 <option value="ADMIN">ADMIN</option>
+                                 <option value="USER">USER</option>
+                            </select>
+                            <br/>
+                            <br/>
 
-                    <button type="submit">Register</button>
-                </form>
+                            <button class="btn btn-primary submit" type="submit">Register</button>
+                        </form>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
