--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -7,49 +7,50 @@
 <body>
 <div class="container-fluid">
     <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div th:if="${successMessage}" th:text="${successMessage}"></div>
+            <h1>User List</h1>
+            <a href="/index" class="btn btn-secondary">Back</a>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col">
+                    <div th:if="${successMessage}" th:text="${successMessage}"></div>
 
-            <!-- Card container -->
-            <div class="container">
-                <div class="row">
-                    <!-- Card for each user -->
-                    <div th:each="user : ${list}" class="col-12 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- Name and Surname in the top row -->
-                                <div class="row mb-2">
-                                    <div class="col-6">
-                                        Name: <span th:text="${user.name}">Name</span>
-                                    </div>
-                                    <div class="col-6">
-                                        Surname: <span th:text="${user.surname}">Surname</span>
+                            <!-- Card for each user -->
+                            <div th:each="user : ${list}" class="col-12 mb-3">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <!-- Name and Surname in the top row -->
+                                        <div class="row mb-2">
+                                            <div class="col-6">
+                                                Name: <span th:text="${user.name}">Name</span>
+                                            </div>
+                                            <div class="col-6">
+                                                Surname: <span th:text="${user.surname}">Surname</span>
+                                            </div>
+                                        </div>
+                                        <!-- Position and Role in the second row -->
+                                        <div class="row mb-2">
+                                            <div class="col-6">
+                                                Position: <span th:text="${user.position}">Position</span>
+                                            </div>
+                                            <div class="col-6">
+                                                Role: <span th:text="${user.role}">Role</span>
+                                            </div>
+                                        </div>
+                                        <!-- Edit button aligned to the right -->
+                                        <div class="d-flex justify-content-end">
+                                            <a th:href="@{/users/edit/{username}(username=${user.username})}" class="btn btn-primary userEdit">Edit</a>
+                                        </div>
                                     </div>
                                 </div>
-                                <!-- Position and Role in the second row -->
-                                <div class="row mb-2">
-                                    <div class="col-6">
-                                        Position: <span th:text="${user.position}">Position</span>
-                                    </div>
-                                    <div class="col-6">
-                                        Role: <span th:text="${user.role}">Role</span>
-                                    </div>
-                                </div>
-                                <!-- Edit button aligned to the right -->
-                                <div class="d-flex justify-content-end">
-                                    <a th:href="@{/users/edit/{username}(username=${user.username})}" class="btn btn-primary userEdit">Edit</a>
-                                </div>
-                            </div>
-                        </div>
+                    </div>
+                    <div>
+                        <a id="newUser" class="btn btn-secondary col" href="newuser">Add New User</a>
                     </div>
                 </div>
-                <div>
-                    <a id="newUser" class="btn btn-secondary col" href="newuser">Add New User</a>
-                </div>
             </div>
-
 
         </main>
     </div>
