--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-12" id="wordle">
-			<h1 id="Logo">Logo</h1>
+			<div >
+				<img src="/img/logo.jpg" alt="Leaf Food Logo" class="pic">
+			</div>
 			<form th:action="@{/login}" method="post" id="login-form">
 				<div>
 					<label> User Name :<br>
