--- a/src/main/resources/static/loginPage.css
+++ b/src/main/resources/static/loginPage.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffeadb; /* Peach background */
+    background-color: #FFFCEF!important;
 }
 
 .container {
@@ -14,13 +14,13 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    width: 49vh;
+    width: 350px;
     height: 50vh;
 
 }
 
 .input-field {
-    width: 150%;
+    width: 310px;
     padding: 10px;
     margin: 10px 0;
     border: 2px solid #ff8c00; /* Dark orange border */
@@ -46,6 +46,10 @@ body {
 label {
     color: #555; /* Dark grey color for the text */
     font-size: 16px;
+}
+
+.pic{
+    width: 350px; /* Adjust the size as needed */
 }
 
 
