--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -61,7 +61,7 @@ input{
 .sidebar-sticky {
     position: relative;
     top: 0px;
-    height: calc(100vh - 48px);
+    /*height: calc(100vh - 48px);*/
     padding-top: 0.5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
