--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,16 +6,15 @@
 <body>
     <div class="container-fluid">
         <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row bg">
+        <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <h1>Main</h1>
                 <div class="row">
-                    <div class="col-md-1"></div>
+                    <div class="col-md-2"></div>
                     <div class="col">
-
+                       index page
                     </div>
-                </div>
             </main>
             </div>
         </div>
