--- a/src/main/resources/static/loginPage.css
+++ b/src/main/resources/static/loginPage.css
@@ -10,7 +10,7 @@ body {
 }
 
 #login-form {
-    background-color: #ffeadb;
+    /*background-color: #ffeadb;*/
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -49,7 +49,7 @@ label {
 }
 
 .pic{
-    width: 350px; /* Adjust the size as needed */
+    width: 250px; /* Adjust the size as needed */
 }
 
 
