--- a/src/main/resources/templates/fragments/logoBar.html
+++ b/src/main/resources/templates/fragments/logoBar.html
@@ -1,11 +1,13 @@
 <div th:fragment="logoBar" >
-    <div class="row">
-        <div class="col-md-2 logo-row">
-            <img src="/img/logo.jpg" alt="Leaf Food Logo" class="logo">
-        </div>
-        <div class="col logo-row"></div>
-        <div class="col-md-8 d-flex  align-items-end logo-row">
-            Tivoli
+    <div class="container-fluid logo-row">
+        <div class="row">
+            <div class="col-md-2">
+                <img src="/img/logo.jpg" alt="Leaf Food Logo" class="logo">
+            </div>
+            <div class="col"></div>
+            <div class="col-md-8 d-flex align-items-end">
+                Name
+            </div>
         </div>
     </div>
 </div>
