--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,4 +1,4 @@
-<div th:fragment="sidebar(activeMenu)" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" class="col-md-3 col-lg-2">
+<div th:fragment="sidebar(activeMenu)" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" class="col-md-3">
   <nav class="sidebar">
     <button id="sidebarToggle">&#9776;</button>
     <div class="sidebar-sticky">
