--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -5,11 +5,11 @@
     <title>SCORAC manage users</title>
 </head>
 <body>
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
 <div class="container-fluid">
-    <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-    <div class="row bg">
+    <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <main class="col-md-9 px-md-3">
             <h1>User List</h1>
             <a href="/index" class="btn btn-secondary">Back</a>
             <div class="row">
