--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -109,6 +109,10 @@ h1{
     width: 25%
 }
 
+table, card{
+    width: 100%;
+}
+
 @media (max-width: 767.98px) {
     .sidebar {
         width: 104%;
