--- a/src/main/resources/static/userCard.css
+++ b/src/main/resources/static/userCard.css
@@ -4,14 +4,14 @@
     gap: 3mm; /* 3 mm gap between each card */
 }
 
-.card {
-    border: 1px solid #ddd; /* Light grey border */
-    border-radius: 5px; /* Rounded corners */
-    padding: 10px;
-    margin-bottom: 3mm; /* Maintain gap at the bottom */
-    background-color:#db9437; /* Light background color */
-    width: 70%;
-}
+/*.card {*/
+/*    border: 1px solid #ddd; !* Light grey border *!*/
+/*    border-radius: 5px; !* Rounded corners *!*/
+/*    padding: 10px;*/
+/*    margin-bottom: 3mm; !* Maintain gap at the bottom *!*/
+/*    background-color:#db9437; !* Light background color *!*/
+/*    width: 70%;*/
+/*}*/
 
 #newUser{
     width: 20%;
