--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -4,10 +4,11 @@
     <title>SCORAC index page</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row">
-            <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
+        <main class="col-md-9 px-md-3">
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div> index</div>
             </main>
