--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,17 +4,69 @@
     <title>SCORAC index page</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <h1>Main</h1>
-                <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col">
-                       index page
+            <main class="col-md-9 px-md-3">
+                <h1>Mains</h1>
+                <div class="row py-2">
+                    <div class="col col-sm-12 col-md-6">
+                        <h2>weather pic</h2>
+                        <div class="card border-warrning border-2">
+                            <div class="card-header text-light "> Events</div>
+                            <div class="card-body py-5">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis error eveniet labore nulla ratione rerum! Aspernatur deleniti esse est mollitia nihil tenetur?</p>
+                            </div>
+                        </div>
                     </div>
+                    <div class="col col-sm-12 col-md-6">
+                        <div class="card border-warrning border-2 h-100">
+                            <div class="card-header text-light "> Notes</div>
+                            <div class="card-body py-5 px-3">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis error eveniet labore nulla ratione rerum! Aspernatur deleniti esse est mollitia nihil tenetur?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h4 class="py-2">Product near expire date:</h4>
+                        <table> <!-- Adding border="1" to visualize the table borders -->
+                            <tr>
+                                <th>Header 1</th>
+                                <th>Header 2</th>
+                            </tr>
+                            <tr>
+                                <td>Row 1, Cell 1</td>
+                                <td>Row 1, Cell 2</td>
+                            </tr>
+                            <tr>
+                                <td>Row 2, Cell 1</td>
+                                <td>Row 2, Cell 2</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4 class="py-2">Orders:</h4>
+                            <table> <!-- Adding border="1" to visualize the table borders -->
+                                <tr >
+                                    <th>Header 1</th>
+                                    <th>Header 2</th>
+                                </tr>
+                                <tr>
+                                    <td>Row 1, Cell 1</td>
+                                    <td>Row 1, Cell 2</td>
+                                </tr>
+                                <tr>
+                                    <td>Row 2, Cell 1</td>
+                                    <td>Row 2, Cell 2</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </main>
             </div>
         </div>
