--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,8 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-sm-12" id="wordle">
-			<div >
+		<div class="col-sm-12 " id="wordle">
+			<div class="text-center">
 				<img src="/img/logo.jpg" alt="Leaf Food Logo" class="pic">
 			</div>
 			<form th:action="@{/login}" method="post" id="login-form">
