--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -4,11 +4,11 @@
     <title>SCORAC manage users</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row">
-            <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
+        <main class="col-md-9 px-md-3">
                 <h1>Add new user</h1>
                 <a href="/users/list" class="btn btn-secondary">Back</a>
                 <div class="row">
