--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -4,11 +4,11 @@
     <title>SCORAC reports page</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row">
-            <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
+        <main class="col-md-9 px-md-3">
                 <div> reports</div>
             </main>
         </div>
