--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -5,11 +5,11 @@
     <title>SCORAC stock level</title>
 </head>
 <body>
-   <div class="container-fluid">
-       <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-       <div class="row">
-           <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
-           <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
+        <main class="col-md-9 px-md-3">
                <h1>Edit Products</h1>
                <div th:each="product, iterStat : ${total}">
                    <form th:action="@{/stock/stockupdate}" th:object="${product}" method="post">
