--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -8,11 +8,12 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('solution')}"></div>
-        <main class="col-md-9 px-md-3">
+        <main class="col-md-8 px-md-3">
             <div> gpt</div>
-            </main>
-        </div>
+        </main>
+        <div class="col"></div>
     </div>
+</div>
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
