--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-<div class="container-fluid">
-    <div class="row">
-        <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
-        <main class="col-md-9 px-md-3">
-                <div> index</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
+            <main class="col-md-8 px-md-3">
+                    <div> index</div>
             </main>
+            <div class="col"></div>
         </div>
     </div>
-
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 
