--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -8,12 +8,12 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
-        <main class="col-md-9 px-md-3">
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <main class="col-md-8 px-md-3">
                 <div> index</div>
-            </main>
-        </div>
+        </main>
+        <div class="col"></div>
     </div>
+</div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 
