--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,13 +8,13 @@
 <div class="container-fluid">
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
-            <main class="col-md-9 px-md-3">
+            <main class="col-md-8 px-md-3">
                 <h1>Mains</h1>
                 <div class="row py-2">
                     <div class="col col-sm-12 col-md-6">
                         <h2>weather pic</h2>
                         <div class="card border-warrning border-2">
-                            <div class="card-header text-light "> Events</div>
+                            <div class="card-header"> Events</div>
                             <div class="card-body py-5">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis error eveniet labore nulla ratione rerum! Aspernatur deleniti esse est mollitia nihil tenetur?</p>
                             </div>
@@ -22,7 +22,7 @@
                     </div>
                     <div class="col col-sm-12 col-md-6">
                         <div class="card border-warrning border-2 h-100">
-                            <div class="card-header text-light "> Notes</div>
+                            <div class="card-header"> Notes</div>
                             <div class="card-body py-5 px-3">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis error eveniet labore nulla ratione rerum! Aspernatur deleniti esse est mollitia nihil tenetur?</p>
                             </div>
@@ -68,6 +68,7 @@
                     </div>
                 </div>
             </main>
+            <div class="col"></div>
             </div>
         </div>
 
