--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -8,9 +8,14 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-        <main class="col-md-9 px-md-3">
-                <h1>Add new user</h1>
-                <a href="/users/list" class="btn btn-secondary">Back</a>
+        <main class="col-md-8 px-md-3">
+            <div class="row py-2">
+                <div class="col col-md-1">
+                    <a href="/users/list" class="btn btn-secondary ">Back</a>
+                </div>
+                <h1 class="col"> Add new user</h1>
+            </div>
+
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col">
@@ -43,9 +48,10 @@
                         </form>
                     </div>
                 </div>
-            </main>
-        </div>
+        </main>
+        <div class="col"></div>
     </div>
+</div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
