--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -8,12 +8,12 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
-        <main class="col-md-9 px-md-3">
+        <main class="col-md-8 px-md-3">
                 <div> recipes</div>
-            </main>
-        </div>
+        </main>
+        <div class="col"></div>
     </div>
-
+</div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
