--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
-        <main class="col-md-9 px-md-3">
+        <main class="col-md-8 px-md-3">
                <h1>Edit Products</h1>
                <div th:each="product, iterStat : ${total}">
                    <form th:action="@{/stock/stockupdate}" th:object="${product}" method="post">
@@ -40,9 +40,10 @@
                    </form>
                    <hr/>
                </div>
-           </main>
-       </div>
-   </div>
+        </main>
+        <div class="col"></div>
+    </div>
+</div>
 
    <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
