--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-        <main class="col-md-9 px-md-3">
+        <main class="col-md-8 px-md-3">
             <h1>User List</h1>
             <a href="/index" class="btn btn-secondary">Back</a>
             <div class="row">
@@ -53,6 +53,7 @@
             </div>
 
         </main>
+        <div class="col"></div>
     </div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
