--- a/src/main/resources/static/loginPage.css
+++ b/src/main/resources/static/loginPage.css
@@ -11,16 +11,16 @@ body {
 
 #login-form {
     /*background-color: #ffeadb;*/
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    /*padding: 20px;*/
+    /*border-radius: 5px;*/
+    /*box-shadow: 0 2px 4px rgba(0,0,0,0.1);*/
     width: 350px;
     height: 50vh;
 
 }
 
 .input-field {
-    width: 310px;
+    width: 350px;
     padding: 10px;
     margin: 10px 0;
     border: 2px solid #ff8c00; /* Dark orange border */
