--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -42,7 +42,7 @@ body{
     height: 4cm; /* Maintain aspect ratio */
 }
 
-input{
+input, textarea{
     width: 60%; /* Makes input take full width of its parent */
     padding: 8px;
     margin: 0; /* Adjust or remove if needed */
@@ -147,7 +147,7 @@ table, card{
         text-align: center !important;
     }
 
-    input{
+    input, textarea{
         width: 100%;
     }
 
