--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -4,13 +4,18 @@
     <title>SCORAC manage users</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div th:replace="~{fragments/logoBar :: logoBar}"></div>
-        <div class="row">
-            <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-            <main class="col-md-8 ms-sm-auto col-lg-10 px-md-4">
-                <div id="editUserForm">
-                    <h1>Edit User <span th:text="${user.username}"></span></h1>
+<div th:replace="~{fragments/logoBar :: logoBar}"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
+        <main class="col-md-8 px-md-3">
+          <div id="editUserForm">
+            <div class="row py-2">
+                <div class="col col-md-1">
+                    <a href="/users/list" class="btn btn-secondary ">Back</a>
+                </div>
+                    <h1 class="col">Edit User <span th:text="${user.username}"></span></h1>
+            </div>
                     <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="container mt-3" >
                     <div>
                         <input th:field="*{username}" type="hidden" name="username">
