--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -9,12 +9,68 @@
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('solution')}"></div>
         <main class="col-md-8 px-md-3">
-            <div> gpt</div>
+           <h1>Search for ideas</h1>
+
+            <div class="row">
+                <div class="col">
+                    <h4 class="py-2">Product near expire date:</h4>
+                    <table> <!-- Adding border="1" to visualize the table borders -->
+                        <tr>
+                            <th>Header 1</th>
+                            <th>Header 2</th>
+                        </tr>
+                        <tr>
+                            <td>Row 1, Cell 1</td>
+                            <td>Row 1, Cell 2</td>
+                        </tr>
+                        <tr>
+                            <td>Row 2, Cell 1</td>
+                            <td>Row 2, Cell 2</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col">
+                    <div class="my-3">
+                        <label for="additionalPrompt">Additional Prompt:</label></br>
+                        <textarea id="additionalPrompt" name="additionalPrompt" rows="2"></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="prompt" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content"> <!-- Corrected class name -->
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modal-title">Prompt</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur ducimus eaque eum facere in iste perferendis possimus repellat sit!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col col-md-2">
+                    <label for="vegan">Vegan</label>
+                    <input type="checkbox" id="vegan">
+                </div>
+                <div class="col">
+                    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#prompt">Send Request</button>
+                </div>
+            </div>
+
+
         </main>
         <div class="col"></div>
     </div>
 </div>
 
+
+</div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
