--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -9,7 +9,34 @@
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('setup')}"></div>
         <main class="col-md-8 px-md-3">
-                <div> index</div>
+            <h1>Setup</h1>
+            <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="mt-3">
+                <div class="my-3">
+                    <label for="restaurantName">Restaurant Name:</label>
+                    <input type="text" id="restaurantName" name="restaurantName" placeholder="Your restaurant name">
+                </div>
+
+                <div class="my-3">
+                    <label for="api">ChatGPT API:</label>
+                    <input type="text" id="api" name="api">
+                </div>
+
+                <!-- Updated div for the text area with class="my-3" for consistent spacing -->
+                <div class="my-3">
+                    <label for="additionalInfo">Information about Restaurant:</label></br>
+                    <textarea id="additionalInfo" name="additionalInfo" rows="4"></textarea>
+                </div>
+
+                <div class="my-3">
+                    <label for="forumLink">Link to Forum:</label>
+                    <input type="text" id="forumLink" name="forumLink">
+                </div>
+
+                <div class="my-3">
+                    <input type="submit" value="Update" class="btn btn-primary">
+                </div>
+            </form>
+
         </main>
         <div class="col"></div>
     </div>
