--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,6 +6,7 @@
 <!--    <link th:href="@{/webjars/datatables/1.10.23/css/jquery.dataTables.min.css}" rel="stylesheet" media="all">-->
     <link rel="stylesheet" th:href="@{/mainLayout.css}"/>
     <link rel="stylesheet" th:href="@{/userCard.css}" />
+    <link rel="stylesheet" th:href="@{/calendar.css}" />
   </head>
   <body>
   </body>
