--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -9,12 +9,36 @@
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('calendar')}"></div>
         <main class="col-md-8 px-md-3">
-                <div> index</div>
+               <h1>Calendar</h1>
+                 <div class="py-5">
+                    <div class="calendar-container">
+                        <div class="calendar-header">
+                            <button id="prev" class="btn btn-primary">&lt;</button>
+                            <h4 id="monthYear"></h4>
+                            <button id="next" class="btn btn-primary">&gt;</button>
+                            <select id="yearSelect" class="form-select mb-3"></select>
+                        </div>
+                        <div id="calendarDays" class="d-flex flex-wrap"></div>
+                    </div>
+                </div>
+            <form>
+                <div class="py-5">
+                    <label for="event">Event participants:</label>
+                    <input type="number" id="event"/>
+                    <button class="btn btn-success">Add</button></br>
+                </div>
+                <div class="py-5">
+                    <label for="notes">Notes:</label>
+                    <textarea id="notes" rows="4"></textarea>
+                    <button type="submit" class="btn btn-primary"> Update</button>
+                </div>
+            </form>
         </main>
         <div class="col"></div>
     </div>
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
+    <script th:src="@{/scripts/calendar.js}"></script>
 </body>
 
 </html>
