--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -8,10 +8,16 @@
 <div th:fragment="scripts">
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--Datatable-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+
     <!-- Bootstrap 5 Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!--    Menu bar toggle button-->
+    <!-- Menu bar toggle button-->
     <script th:src="@{/scripts/tooglebar.js}"></script>
+    <!-- Search bar-->
+    <script th:src="@{/scripts/search.js}"></script>
 </div>
 </body>
 </html>
