--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -12,12 +12,12 @@
             <h1>Recipe List</h1>
             <a href="/index" class="btn btn-secondary">Back</a>
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col">
+
+                <div class="col md-4">
                     <div th:if="${successMessage}" th:text="${successMessage}"></div>
 
                     <!-- Card for each user -->
-                    <div th:each="user : ${list}" class="col-12 mb-3">
+                    <div th:each="user : ${list}" class="col mb-3">
                         <div class="card">
                             <div class="card-body">
                                 <!-- Name and Surname in the top row -->
@@ -40,8 +40,23 @@
                         <a id="newUser" class="btn btn-secondary col" href="newrecipe">Add New Recipe</a>
                     </div>
                 </div>
+                <div class="col mt-5">
+                    <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search items...">
+                    <ul id="itemsList" class="list-group">
+                        <!--                                <li th:each="item : ${itemProducts}" th:text="${item}" class="list-group-item"></li>-->
+                        <li>12</li>
+                        <li>11</li>
+                        <li>10</li>
+                        <li>9</li>
+                        <li>1</li>
+                        <li>7</li>
+                        <li>6</li>
+                        <li>5</li>
+                        <li>4</li>
+                        <li>3</li>
+                    </ul>
+                </div>
             </div>
-
         </main>
         <div class="col"></div>
     </div>
