--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -32,8 +32,22 @@
                             <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#waste">Add</button>
 <!--                        </form>-->
                     </div>
-                    <div class="col">
-                        <div class="bd-success">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam amet aperiam at consectetur debitis dignissimos doloremque dolores doloribus eaque eligendi eos ex exercitationem explicabo impedit in iste laboriosam libero magnam maiores minima molestiae nihil non officia pariatur porro quis ratione repellat, sed suscipit tempore unde voluptate voluptates? Dignissimos eius, ex fuga fugiat illo illum maxime, nihil nisi reiciendis, sunt tenetur velit vero vitae! Ab accusantium beatae cumque deleniti dolorem eum incidunt non nulla numquam omnis, quasi reprehenderit repudiandae similique vel vero vitae voluptatibus? Asperiores atque, aut commodi distinctio dolorem incidunt laborum minus, nam natus quia quidem quos repudiandae voluptatum.</div>
+                    <div class="col mt-5">
+                            <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search items...">
+
+                            <ul id="itemsList" class="list-group">
+<!--                                <li th:each="item : ${itemProducts}" th:text="${item}" class="list-group-item"></li>-->
+                                <li>12</li>
+                                <li>11</li>
+                                <li>10</li>
+                                <li>9</li>
+                                <li>1</li>
+                                <li>7</li>
+                                <li>6</li>
+                                <li>5</li>
+                                <li>4</li>
+                                <li>3</li>
+                            </ul>
                     </div>
                 </div>
             </main>
