--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="col mt-5">
-                    <input type="text" id="searchInput" class="form-control mb-3" placeholder="Search items...">
+                    <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">
                     <ul id="itemsList" class="list-group">
                         <!--                                <li th:each="item : ${itemProducts}" th:text="${item}" class="list-group-item"></li>-->
                         <li>12</li>
