--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -13,12 +13,12 @@
             <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="mt-3">
                 <div class="my-3">
                     <label for="restaurantName">Restaurant Name:</label>
-                    <input type="text" id="restaurantName" name="restaurantName" placeholder="Your restaurant name">
+                    <input class="textfield" type="text" id="restaurantName" name="restaurantName" placeholder="Your restaurant name">
                 </div>
 
                 <div class="my-3">
                     <label for="api">ChatGPT API:</label>
-                    <input type="text" id="api" name="api">
+                    <input class="textfield" type="text" id="api" name="api">
                 </div>
 
                 <!-- Updated div for the text area with class="my-3" for consistent spacing -->
@@ -29,7 +29,7 @@
 
                 <div class="my-3">
                     <label for="forumLink">Link to Forum:</label>
-                    <input type="text" id="forumLink" name="forumLink">
+                    <input class="textfield" type="text" id="forumLink" name="forumLink">
                 </div>
 
                 <div class="my-3">
